
Subsequent quests in factions, are now unlocked depending on shades, rather than dungeon / plot completion

==========================================================================================

## EXTRA PATCHES

You can activate these patches from the Randomizer menu in CCItemRandomizer, or through the .yaml settings in the CCMultiworldRandomizer

# Vermillion Tower Shade and Boss lock:

- A condition that locks Vermillion Tower entrance until you get all 4 element shades (Azure Drop, Purple Bolt, Blue Ice, and Red Flame Shades), and beaten the 4 element dungeons (Mine, Faj'ro, So'najiz and Zir'vitar).

# Vermillion Tower floor skips:

- Enables all Tower floors once you finish the ground floor fight. This allows skipping the entirety of Vermillion Tower up to the last fight before the boss.

# Meteor Shade Wasteland:

- Locks Vermillion Wasteland Tunnel behind a Meteor Shade barrier.

# Open Faj'ro Temple:

- Enables a few extra passages on Upper Faj'ro Temple to make it less linear. This means most puzzles must be done in reverse order to access certain locations in reverse.
  This includes:

* F4 South Corridor has no doors locked (you can access Test of Surprise or Test of Memory earlier)
* F4 East Corridor can now be done in reverse
* F4 Gateway side doors are now accesible from the top floor
* F4 East Pathway can now be solved from both sides (from the bottom side, you have to solve the puzzle in reverse to exit up)
* F3 Test of Wisdom can now be accessed from F3 Bottom Chamber. This means to access F4 East Corridor through F3 Right Chamber, you have to solve the puzzle in reverse

==========================================================================================

## VERSION CHANGES

# v0.2.2

Fixes:
- More guild fixes (hopefully) to prevent softlocks due to NPCs not spawning

Changes: 
- All SP upgrades are now incremental instead of fixed
- VT Boss&Shade barrier can now be set to be only boss, only shades or both

# v0.2.1

Fixes: