@@ -97,17 +97,6 @@
         "content": "plot.guildEntry >= 71"
     },
     { "type": "EXIT" },
-    {
-        "type": "FOR_IN",
-        "_comment": "Make sure no plot interaction happens, for no despawn softlock mostly",
-        "keyword": "__INDEX__",
-        "values": [5,6,7,8,9,10],
-        "body": [
-            { "type": "ENTER", "index": "__INDEX__" },
-            { "type": "SET_KEY", "index": "condition", "content": "false" },
-            { "type": "EXIT", "count": 1 }
-        ]
-    },  
     { "type": "ENTER", "index": 2 },
     {
         "type": "SET_KEY",
